# hospital-calling

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
server/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
server/.local-setup/: .env.local  .env.test
server/api/: SPEC.md
server/api/backoffice/: SPEC.md  _soft_delete.py  pagination.py  permissions.py  urls.py
server/api/webhook/: urls.py
server/calling/: models.py  tasks.py  vars.py
server/calling/migrations/: 0001_initial.py  0002_seed_dummy_data.py  0003_callattempt_recording_s3_key.py  0004_callattempt_is_deleted_callschedule_is_deleted.py  0005_callschedule_memo_voice_model.py  0006_callattempt_voice_model.py  0007_callschedule_batch_id_and_more.py  0008_callcomment_callschedulehospital_and_more.py  0009_backfill_schedule_targets.py  0010_remove_callschedule_hospital.py  0011_callcomment_author.py  0012_demo_seed.py
server/docs/architecture/: layers.md
server/docs/conventions/: api-layer.md  celery.md  code-style.md  external-services.md  models.md  testing.md
server/health/: urls.py  views.py
server/hospcall/: __init__.py  asgi.py  celery.py  schedules.py  urls.py
server/hospcall/settings/: __init__.py  base.py
server/hospital/: admin.py  models.py  vars.py
server/hospital/migrations/: 0001_initial.py  0002_hospital_is_deleted.py  0003_split_category_dimensions.py  0004_backfill_category_to_dimensions.py  0005_label_history.py  0006_drop_legacy_classification.py  0007_chainkeyword.py  0008_hospital_idx_hospital_state_upper.py  0009_hospital_idx_hospital_phone.py
server/hospital/rules/: exclusion.py
server/prompt/: models.py
server/prompt/migrations/: 0001_initial.py  0002_seed_v2.py  0003_remove_prompt_uq_prompt_active_per_name_and_more.py  0004_remove_prompt_uq_prompt_active_per_name_and_more.py  0005_remove_prompt_objective_voice_model.py  0006_alter_prompt_name.py
server/schedule/: models.py  tasks.py
server/schedule/migrations/: 0001_initial.py
server/sourcing/: models.py  vars.py
server/sourcing/data/: us_cities.json
server/sourcing/migrations/: 0001_initial.py  0002_drop_refresh_fields.py  0003_drop_dry_run.py  0004_tile_pipeline.py  0005_city.py  0006_sourcingjob_merged_count.py
server/tests/: conftest.py
server/tests/integration/: test_backoffice_calls.py  test_backoffice_chain_keywords.py  test_backoffice_hospitals.py  test_backoffice_prompts.py  test_backoffice_schedules.py  test_backoffice_sourcing.py  test_chain_keyword_rules.py  test_dispatch_schedule.py  test_hospital_migration_0004.py  test_sourcing_service.py  test_sourcing_tasks.py
server/tests/unit/: test_backoffice_permissions.py  test_blandai_schemas.py  test_exclusion_regexes.py  test_geo.py  test_google_places_client.py  test_hospcall_calling_service.py  test_recordings_storage.py  test_sourcing_dedup.py  (+2 more)
server/utils/: cache_utils.py  enums.py  geo.py
(+111 files in other folders)
